--- a/config.toml
+++ b/config.toml
@@ -9,11 +9,11 @@ title = "Michael Bigelow"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/"
+baseurl = "https://michaelbigelow.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = ""
+copyright = "&copy; {2020} Michael J Bigelow"
 
 ############################
 ## Advanced options below ##
