--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ baseurl = "https://michaelbigelow.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; {2020} Michael J Bigelow"
+copyright = "&copy; {year} Michael J Bigelow"
 
 ############################
 ## Advanced options below ##
