--- a/config.toml
+++ b/config.toml
@@ -35,6 +35,7 @@ paginate = 10  # Number of items per page in paginated lists.
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+googleAnalytics = "UA-157723544-1"
 
 [outputs]
   home = [ "HTML", "RSS", "JSON", "WebAppManifest" ]
