--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -143,7 +143,7 @@ address_format = "en-us"
 main_menu = {align = "l", show_logo = true}
 
 # Show estimated reading time for posts? (true/false)
-reading_time = true
+reading_time = false
 
 # Display next/previous section pager? (true/false)
 section_pager = false
@@ -205,7 +205,7 @@ plugins_js  = []
   #   0: Disabled
   #   1: Disqus (https://disqus.com)
   #   2: Commento (https://commento.io)
-  engine = 2
+  engine = 0
 
   # Which page types are commentable?
   commentable = {page = false, post = true, docs = false, project = true, publication = true, talk = true}
