notes added to header menu

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,15 +24,15 @@
   url = "cs/"
   weight = 50
 
-# [[main]]
-#   name = "Publications"
-#   url = "#featured"
-#   weight = 40
+ [[main]]
+   name = "Notes"
+   url = "notes/"
+   weight = 60
 
 [[main]]
   name = "About"
   url = "about/"
-  weight = 60
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
